correction bug overflow nav et titre h1 non centré

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 
 body {
   margin: 0;
-  font-family:'Roboto';
+  font-family: 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
